[package]
name = "miku-macros"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "procedural macros for miku-rpc"
readme = "README.md"
repository = "https://github.com/allie-signet/miku-rpc"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "printing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"