[package]
name = "miku-rpc"
version = "0.1.4"
edition = "2021"
license-file =  "../LICENSE"
readme = "../README.md"
description = "an implementation of the opencomputers 2 RPC api"
repository = "https://github.com/allie-signet/miku-rpc"

[dependencies]
epoll-rs = "0.2.1"
termios = "0.3"
miniserde-miku = "0.1"
miku-macros = { path = "../miku-macros", version = "0.1.2" }
arrayvec = "0.7"

[features]
default = ["wrappers"]
wrappers = []
